# backend

./: Cargo.toml  capacitor.config.json  package-lock.json  package.json  render.yaml
chess-engine/: .env  .gitignore  Cargo.toml
chess-engine/src/: lib.rs  main.rs
chess-engine/src/api/: handlers.rs
chess-engine/src/auth/: handlers.rs  jwt.rs  mod.rs  models.rs  validation.rs
chess-engine/src/chess/: board.rs  game.rs  mod.rs  types.rs
chess-engine/src/db/: mod.rs
